--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <div class="container">
         <h2>Events home work</h2>
-        <button class="button1" id="cta1">First</button>
+        <button onclick="htmlMethod()" class="button1" id="cta1">First</button>
         <button class="button2" id="cta2">Second</button>
-        <button onclick="htmlMethod()" class="button3" id="cta3">Third</button>
+        <button class="button3" id="cta3">Third</button>
         <p id="resultText"></p>
 
 
